back4app working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string-array name="trans_types">
+        <item>--- اختر طريقة التحويل ---</item>
+        <item>باي بال(PayPal)</item>
+        <item> حساب بنكي في السعودية</item>
+        <item> حساب بنكي في دولة اخرى</item>
+
+    </string-array>
+
+
 </resources>
